<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="splah_delay">3000</string>
    <string name="app_name">FeuilleDeMatch</string>
    <string name="fait_name">Ajout fait de match</string>
    <string name="button_new">Nouveau match</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_open">Ouvrir un match</string>
    <string name="button_pref">Préférences</string>
    <string name="button_addEventLocaux">Evt loc.</string>
    <string name="button_addEventVisitor">Evt visit.</string>
    <string name="team_local">LOCAUX</string>
    <string name="team_visitor">VISITEURS</string>
    <string name="team_inconnue">Inconnu</string>
    <string name="foo">foo</string>
    <string name="fait_minute">Minute</string>
    <string name="fait_joueur">Joueur</string>
    <string name="fait_fait">Fait marquant</string>
    <string name="fait_comment">Commentaire</string>
    <string name="match_date">Date de la rencontre</string>
    <string name="match_sport">Sport</string>
    <string name="button_save">Enregistrer</string>
    <string name="button_validate">Valider</string>
    <string name="message_delete">Voulez vous vraiment supprimer ce fait de match ?</string>
    <string name="message_confirm_save">Voulez vous enregistrer ce match avant de quitter l\'application ?</string>
    <string name="message_sortie">Sortie de l\'application</string>
    <string name="button_yes">Oui</string>
    <string name="button_no">Non</string>
    <string name="zero">0</string>
    <string name="imageSplash">Feuille de match</string>

    <!-- Libellés utilisés dans les parmatères -->
    <string name="param_cd_rugby13">RUG13</string>
    <string name="param_cd_rugby15">RUG15</string>
    <string name="param_rugby13">Rugby à XIII</string>
    <string name="param_rugby15">Rugby à XV</string>
    <string name="param_foot">Football</string>
    <string name="param_basket">Basket</string>
    <string name="param_finmatch">Fin de match</string>
    <string name="param_debutmatch">Début de match</string>
    <string name="param_essai_penalite">Essai de pénalité</string>
    <string name="param_essai">Essai</string>
    <string name="param_drop">Drop</string>
    <string name="param_penalite">Pénalité</string>
    <string name="param_transformation">Transformation</string>
    <string name="param_but">But</string>
    <string name="param_faute">Faute</string>
    <string name="param_penalty">Penalty</string>
    <string name="param_carton_jaune">Carton jaune</string>
    <string name="param_carton_rouge">Carton rouge</string>
    <string name="param_panier2">Panier à 2 points</string>
    <string name="param_panier3">Panier à 3 points</string>
    <string name="param_lancer1">1 lancer franc réussi</string>
    <string name="param_lancer2">2 lancers francs réussis</string>
    <string name="param_lancer3">3 lancers francs réussis</string>
   	<string name="param_faute_off">Faute offenssive</string>
    <string name="param_technique">Faute technique</string>
    <string name="param_divers">Autre</string>
    <string name="message_savedKO">Erreur lors de la sauvegarde du match!</string>
    <string name="message_savedOK">Match sauvegardé</string>
    <string name="message_noScoreSheetInDatabase">Aucun match n\'a encore été sauvegardé</string>
    <string name="message_errorLoadMatches">Impossible de récupérer les matchs sauvegardés</string>
    <string name="message_sortie">Voulez vous vraiment sortir de l \'application ?</string>
    <string name="message_suppression">Voulez vous supprimer ce match ?</string>

</resources>